build: setup build for platforms
- also set app icon to platforms